manifest/deployment-config.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: example
  namespace: georgi
spec:
  triggers:
    - type: ConfigChange
  replicas: 3
  selector:
    app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: givanov-go-sample
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
