manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: georgi
spec:
  selector:
    app: test
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
